[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"
description = "Advent of code 2022 - solutions CLI"
authors = ["Thomas Kosiewski <thoma471@googlemail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chumsky = "0.8.0"
clap = { version = "4.0.29", features = ["cargo", "env", "derive"] }
clap-verbosity-flag = "2.0.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
